# compudime-bom

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.bat  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat
alembic/: env.py
alembic/versions/: 99b1e2e6d378_initial_schema.py
api/: __init__.py  app.py  config.py  dependencies.py
api/repositories/: __init__.py
api/routers/: __init__.py  bom.py  health.py  ingredients.py  recipes.py  users.py
api/schemas/: __init__.py  bom.py  common.py  ingredient.py  recipe.py  user.py
api/services/: auth_service.py  bom_service.py  cost_calculator.py  ingredient_service.py  recipe_service.py  unit_converter.py
apps/api/: .env.example  jest.config.js  package.json  tsconfig.json
apps/api/src/: app.ts  auth.ts  index.ts
apps/api/tests/: auth.test.ts  bom.test.ts  db.test.ts  recipes.test.ts  (+5 more)
database/: __init__.py  database.py  models.py
docs/: API_SPEC.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  MIGRATION_TRACKER.md  NODEJS_REWRITE_PLAN.md  PHASE1_TASK.md  PHASE2_TASK.md  PHASE3_TASK.md  REQUIREMENTS.md  STACK_DECISION.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
tests/: __init__.py  conftest.py  test_auth.py  test_bom_api.py  test_config.py  test_cost_calculator.py  test_health.py  test_ingredients_api.py  test_recipes_api.py  test_unit_converter.py
website/: Dockerfile  fly.toml  index.html  nginx.conf
(+27 files in other folders)
